--- a/SnP(지영)_keydev.ipynb
+++ b/SnP(지영)_keydev.ipynb
@@ -2090,9 +2090,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8e060f5",
+   "metadata": {},
+   "source": [
+    "keydev 전처리 관련 질문\n",
+    "1. 텍스트 분석(감성분석)을 어떻게 해야할 지 -> situation 컬럼 하나로 하자\n",
+    "    의문 : 감성분석할 때, (+)(-)(0) 를 구별해야하는데, \n",
+    "    감성 분석 하려면, 컬럼(situation) 사용보다 뉴스 크롤링해야하는데, 얘가 메인업무량이 될까바 ,,, 흠 \n",
+    "2. 회사 종류 454483개 -> 얘를 어떻게 해야할 지 : 상장/비상장인지 여부를 여기서 확인하거나 다른 df 연동시켜야하는데 연동방법 몰라,, \n",
+    "3. companyID -> company table에서 ticker와 연동하면되고, 구글링 ㄱ\n",
+    "\n",
+    "의견\n",
+    "- 최대한 간단하게 작업을 끝내놓고(산업군 분석, 상승할/하락할 산업군 비중 최적화 한다던지)\n",
+    "- 거시 경제 지표 최대한 활용해서 산업군 분석 예정(금리, 환율, 인플레이션, 경제 성장률, 고용률, 실업률 등등 이 중에서 있는 데이터 활용)\n",
+    "- 산업군 분석 -> 상승할 것들 종목 확인 해서 가치지표 (PER, ROE) 활용해서 스크리닝한다던지 등\n",
+    "- 이렇게 할거면, 데이터 다시 봐서 산업군 분석에 사용할 수 있는 데이터 먼저 고르기 -> 가치지표 어떻게 활용할지 고르기\n",
+    "- 산업군 분석 어떻게 진행하는 지 조사 후 우리 데이터랑 쓸만한 컬럼 비교해서 의견 나누기\n",
+    "- 데이터 전처리 팁 ! 우선, 투자 안할 회사들(티커 company 테이블, 재균오빠 파일 참고) , 비상장종목, ticker-companyID 안맞는거 제거하면 용량 많이 제거됨\n",
+    "\n",
+    "월요일 13시 30분 회의\n",
+    "- 지금까지 의견 나온거 종합해서 각자의 아이디어 활용해서 데이터 전처리 방안, 분석 방안, 구현 방안 논의할거 정리해오기 \n",
+    "- 월요일에 교수님 피드백 받을 내용 준비하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8e060f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
