별 내용 없음

--- a/SnP(재균).ipynb
+++ b/SnP(재균).ipynb
@@ -653,6 +653,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "그래프에서 'Capital Markets'가 산업군으로 분류되어 있습니다. 이 그래프는 다양한 산업군에 속한 회사들의 수를 비교하고 있으며, 'Capital Markets' 산업군에 속한 회사들의 수가 다른 산업군에 비해 월등히 많은 것으로 나타나고 있습니다. 이는 해당 데이터셋이나 분석 방식에 특정 기준이 적용되었을 가능성을 나타낼 수 있습니다. 예를 들어, 'Capital Markets'에 분류된 회사들이 다양한 금융 서비스를 포함하고 있어서 그 수가 많게 나온 것일 수 있습니다. 다만, 이것이 실제 시장에서의 비중이나 규모를 직접적으로 반영하는 것은 아닐 수 있으므로, 이 그래프를 해석할 때는 주의가 필요합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
