--- a/SnP(지영)_keydev.ipynb
+++ b/SnP(지영)_keydev.ipynb
@@ -2116,10 +2116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dsfsfsdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('dsfsfsdf')"
+   ]
   },
   {
    "cell_type": "code",
@@ -2145,7 +2155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
