--- a/SnP(지영)_keydev.ipynb
+++ b/SnP(지영)_keydev.ipynb
@@ -2123,12 +2123,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsfsfsdf\n"
+      "dsfssdf\n"
      ]
     }
    ],
    "source": [
-    "print('dsfsfsdf')"
+    "print('dsfssdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hi')"
    ]
   },
   {
