--- a/SnP(지영)_keydev.ipynb
+++ b/SnP(지영)_keydev.ipynb
@@ -2116,19 +2116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dsfssdf\n"
+      "dsfsf\n"
      ]
     }
    ],
    "source": [
-    "print('dsfssdf')"
+    "print('dsfsf')"
    ]
   },
   {
