--- a/SnP(재균).ipynb
+++ b/SnP(재균).ipynb
@@ -668,12 +668,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "hello, world!\n"
      ]
     }
    ],
    "source": [
-    "print('hello')"
+    "print('hello, world!')"
    ]
   },
   {
