--- a/SnP(데이터 전처리).ipynb
+++ b/SnP(데이터 전처리).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "[30875652 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,37 +513,104 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         tickerSymbol simpleIndustryDescription\n",
-      "5               MMINV           Capital Markets\n",
-      "7                 III           Capital Markets\n",
-      "14               ABBN      Electrical Equipment\n",
-      "70                ALB                 Chemicals\n",
-      "86                ALL                 Insurance\n",
-      "...               ...                       ...\n",
-      "30867885      A465780           Capital Markets\n",
-      "30867925       159538           Capital Markets\n",
-      "30869103       159535           Capital Markets\n",
-      "30869251       560590           Capital Markets\n",
-      "30870524         7648                      None\n",
+      "           companyId tickerSymbol simpleIndustryDescription\n",
+      "5              18507        MMINV           Capital Markets\n",
+      "7              18511          III           Capital Markets\n",
+      "14             18527         ABBN      Electrical Equipment\n",
+      "70             18671          ALB                 Chemicals\n",
+      "86             18711          ALL                 Insurance\n",
+      "...              ...          ...                       ...\n",
+      "30867885  1856137616      A465780           Capital Markets\n",
+      "30867925  1856140720       159538           Capital Markets\n",
+      "30869103  1856171608       159535           Capital Markets\n",
+      "30869251  1856175940       560590           Capital Markets\n",
+      "30870524  1856247242         7648                      None\n",
       "\n",
-      "[250131 rows x 2 columns]\n"
+      "[250131 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
     "#상장사만 남기고 나머지 제거\n",
-    "\n",
     "import pandas as pd\n",
+    "company = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/company.parquet'\n",
     "\n",
-    "company_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/company.parquet'\n",
-    "company_df = pd.read_parquet(company_path)\n",
+    "company_df = pd.read_parquet(company)\n",
     "\n",
     "#비상장사 제거\n",
     "filtered_company_df = company_df[company_df['tickerSymbol'].notnull()]\n",
     "\n",
-    "selected_columns = filtered_company_df[['tickerSymbol', 'simpleIndustryDescription']]\n",
+    "selected_columns = filtered_company_df[['companyId', 'tickerSymbol', 'simpleIndustryDescription']]\n",
     "\n",
     "print(selected_columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CSV 파일로 저장\n",
+    "csv_file_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/filtered_companies.csv'\n",
+    "selected_columns.to_csv(csv_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#앞으로 company 데이터는 filtered_companies.csv 파일을 사용합니다. \n",
+    "import pandas as pd\n",
+    "filtered_company = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/filtered_companies.csv'\n",
+    "filtered_company_df = pd.read_csv(filtered_company)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         companyId tickerSymbol simpleIndustryDescription\n",
+      "0            18507        MMINV           Capital Markets\n",
+      "1            18511          III           Capital Markets\n",
+      "2            18527         ABBN      Electrical Equipment\n",
+      "3            18671          ALB                 Chemicals\n",
+      "4            18711          ALL                 Insurance\n",
+      "...            ...          ...                       ...\n",
+      "250125  1856137019       561280           Capital Markets\n",
+      "250126  1856137616      A465780           Capital Markets\n",
+      "250127  1856140720       159538           Capital Markets\n",
+      "250128  1856171608       159535           Capital Markets\n",
+      "250129  1856175940       560590           Capital Markets\n",
+      "\n",
+      "[185195 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# simpleIndustryDescription 열에서 결측치가 있는 행을 삭제\n",
+    "filtered_company_df = filtered_company_df.dropna(subset=['simpleIndustryDescription'])\n",
+    "\n",
+    "# 결과 확인\n",
+    "print(filtered_company_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CSV 파일로 저장\n",
+    "csv_file_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/filtered_companies.csv'\n",
+    "filtered_company_df.to_csv(csv_file_path, index=False)"
    ]
   },
   {
@@ -657,23 +724,6 @@
    "metadata": {},
    "source": [
     "그래프에서 'Capital Markets'가 산업군으로 분류되어 있습니다. 이 그래프는 다양한 산업군에 속한 회사들의 수를 비교하고 있으며, 'Capital Markets' 산업군에 속한 회사들의 수가 다른 산업군에 비해 월등히 많은 것으로 나타나고 있습니다. 이는 해당 데이터셋이나 분석 방식에 특정 기준이 적용되었을 가능성을 나타낼 수 있습니다. 예를 들어, 'Capital Markets'에 분류된 회사들이 다양한 금융 서비스를 포함하고 있어서 그 수가 많게 나온 것일 수 있습니다. 다만, 이것이 실제 시장에서의 비중이나 규모를 직접적으로 반영하는 것은 아닐 수 있으므로, 이 그래프를 해석할 때는 주의가 필요합니다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello, world!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('hello, world!')"
    ]
   },
   {
