상위 15, 30개 종목 추출

--- a/SnP(데이터 전처리).ipynb
+++ b/SnP(데이터 전처리).ipynb
@@ -775,6 +775,198 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSFT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NVDA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JNJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PFE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>567</th>\n",
+       "      <td>FB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>MMM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>HON</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>NEE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>XOM</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>572 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     MSFT\n",
+       "0    AAPL\n",
+       "1    NVDA\n",
+       "2     JNJ\n",
+       "3     PFE\n",
+       "4     ABT\n",
+       "..    ...\n",
+       "567    FB\n",
+       "568   MMM\n",
+       "569   HON\n",
+       "570   NEE\n",
+       "571   XOM\n",
+       "\n",
+       "[572 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 티커 빈도 확인\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 파일 경로\n",
+    "file_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/SnP/15개 자산 티커.xlsx'\n",
+    "\n",
+    "# 엑셀 파일 읽기\n",
+    "try:\n",
+    "    data = pd.read_excel(file_path)\n",
+    "except Exception as e:\n",
+    "    data = str(e)\n",
+    "\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AAPL     30\n",
+       "AMZN     30\n",
+       "NVDA     30\n",
+       "JPM      30\n",
+       "PG       30\n",
+       "PFE      30\n",
+       "JNJ      30\n",
+       "KO       29\n",
+       "XOM      29\n",
+       "NEE      29\n",
+       "GOOGL    29\n",
+       "MSFT     29\n",
+       "TSLA     29\n",
+       "NKE      27\n",
+       "BAC      26\n",
+       "MMM      26\n",
+       "GS       24\n",
+       "FB       23\n",
+       "HON      14\n",
+       "MRK      14\n",
+       "ABT      11\n",
+       "V         8\n",
+       "ABBV      4\n",
+       "HD        3\n",
+       "CAT       3\n",
+       "BRK.B     1\n",
+       "DUK       1\n",
+       "UNH       1\n",
+       "T         1\n",
+       "ADBE      1\n",
+       "Name: MSFT, dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 티커들의 빈도수 확인 및 빈도수대로 정렬\n",
+    "ticker_frequency = data['MSFT'].value_counts().sort_values(ascending=False)\n",
+    "\n",
+    "ticker_frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AAPL\n",
+    "AMZN\n",
+    "NVDA\n",
+    "JPM\n",
+    "PG\n",
+    "PFE\n",
+    "JNJ\n",
+    "KO\n",
+    "XOM\n",
+    "NEE\n",
+    "GOOGL\n",
+    "MSFT\n",
+    "TSLA\n",
+    "NKE\n",
+    "BAC"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
