--- a/SnP(데이터 전처리).ipynb
+++ b/SnP(데이터 전처리).ipynb
@@ -875,7 +875,7 @@
     }
    ],
    "source": [
-    "# 티커 빈도 확인\n",
+    "# 15개 자산 티커 빈도 확인\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -945,24 +945,156 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MSFT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NVDA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JNJ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PFE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>GS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>974</th>\n",
+       "      <td>ABT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>975</th>\n",
+       "      <td>UNH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>976</th>\n",
+       "      <td>NKE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>977 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     AAPL\n",
+       "0    MSFT\n",
+       "1    NVDA\n",
+       "2     AMD\n",
+       "3     JNJ\n",
+       "4     PFE\n",
+       "..    ...\n",
+       "972    GS\n",
+       "973     V\n",
+       "974   ABT\n",
+       "975   UNH\n",
+       "976   NKE\n",
+       "\n",
+       "[977 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "AAPL\n",
-    "AMZN\n",
-    "NVDA\n",
-    "JPM\n",
-    "PG\n",
-    "PFE\n",
-    "JNJ\n",
-    "KO\n",
-    "XOM\n",
-    "NEE\n",
-    "GOOGL\n",
-    "MSFT\n",
-    "TSLA\n",
-    "NKE\n",
-    "BAC"
+    "# 30개 자산 티커 빈도 확인\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 파일 경로\n",
+    "file_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/SnP/30개 자산 티커.xlsx'\n",
+    "\n",
+    "# 엑셀 파일 읽기\n",
+    "try:\n",
+    "    data = pd.read_excel(file_path)\n",
+    "except Exception as e:\n",
+    "    data = str(e)\n",
+    "\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/SnP/30개 자산 티커.xlsx.xlsx'\n",
+      "['MSFT', 'AMZN', 'JNJ', 'PFE', 'JPM', 'NVDA', 'AAPL', 'CAT', 'CVX', 'NKE', 'PG', 'GS', 'NEE', 'KO', 'MRK', 'TSLA', 'BA', 'VZ', 'GOOGL', 'CRM', 'ADBE', 'UNH', 'WMT', 'QCOM', 'BRK.B', 'V', 'ABT', 'MCD', 'INTC', 'XOM']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 파일 경로\n",
+    "file_path = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/SnP/30개 자산 티커.xlsx.xlsx'  # 올바른 파일 경로로 변경하세요\n",
+    "\n",
+    "# 엑셀 파일을 DataFrame으로 읽기\n",
+    "try:\n",
+    "    data = pd.read_excel(file_path)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# 모든 열에 대해 티커의 빈도수를 계산하고, 합산하여 전체 빈도수를 계산\n",
+    "ticker_frequency = data.apply(pd.value_counts).sum(axis=1).sort_values(ascending=False)\n",
+    "\n",
+    "# 가장 빈도가 높은 상위 30개의 티커를 리스트로 추출\n",
+    "top_30_tickers = ticker_frequency.head(30).index.tolist()\n",
+    "\n",
+    "print(top_30_tickers)"
    ]
   },
   {
