--- a/SnP(GPT-weighted).ipynb
+++ b/SnP(GPT-weighted).ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **GPT-weighted 포트폴리오들의 누적 수익률 계산**"
+    "## **GPT-weighted 포트폴리오들의 누적 수익률 계산 (In-sample 기간)**"
    ]
   },
   {
@@ -441,7 +441,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Mean-Variance Optimization으로 최적 가중치 구해보기**"
+    "## **Mean-Variance Optimization**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cvxpy as cp"
    ]
   },
   {
@@ -449,7 +459,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "불러온 Ticker들의 Adj Close를 수익률로 변환합니다.\n",
+    "Adj Close를 쓰고 싶은 경우에는 df를 쓰면됨\n",
+    "\"\"\"\n",
+    "\n",
+    "ret = df.pct_change().dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 변수 설정\n",
+    "\n",
+    "num_assets = df.shape[1] # 종목 개수가 나와야함\n",
+    "weights = cp.Variable((num_assets,1)) # 종목 개수랑 같아야함\n",
+    "ex_ret = np.mean(ret, axis=0) # 개별 종목 별 기대수익률\n",
+    "cov_mat = np.cov(ret.values.T) # 개별 종목 별 기대수익률을 구해서 Covariance Matrix를 만듬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GMV\n",
+    "\n",
+    "obj = cp.Minimize(cp.quad_form(weights, cov_mat)) # 목적식 설정\n",
+    "\n",
+    "# weights >= 0 \n",
+    "const = [cp.sum(weights) == 1] # 제약식 설정, 공매도 원하면 위에 주석 가져다 옆으로 복붙하면됨\n",
+    "\n",
+    "problem = cp.Problem(obj, const) # 문제 정의\n",
+    "problem.solve(verbose=False, solver=cp.CPLEX) # 문제 풀기\n",
+    "\n",
+    "if problem.status == \"optimal\": # Solved 해가 최적의 해면 weights 출력\n",
+    "    print(weights.value)\n",
+    "    \n",
+    "    # print(max(weights.value)) # 가장 큰 weight를 보고싶으면 이거 주석 해제\n",
+    "else:\n",
+    "    print(\"It isn't optimal\")"
+   ]
   }
  ],
  "metadata": {
