--- a/SnP(GPT-weighted).ipynb
+++ b/SnP(GPT-weighted).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,10 @@
     "company = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/company.parquet'\n",
     "transcript = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/transcript.parquet'\n",
     "financial = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/financials.parquet'\n",
-    "market = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market.parquet'\n",
+    "market1 = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market1.parquet'\n",
+    "market2 = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market2.parquet'\n",
+    "market3 = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market3.parquet'\n",
+    "market4 = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market4.parquet'\n",
     "\n",
     "#pd.read_parquet(ownership)\n",
     "#pd.read_parquet(professional)\n",
@@ -33,7 +36,119 @@
     "#pd.read_parquet(estimates)\n",
     "#pd.read_parquet(company)\n",
     "#pd.read_parquet(transcript)\n",
-    "#pd.read_parquet(market)"
+    "\n",
+    "\n",
+    "columns_to_read = ['tickerSymbol', 'priceClose', 'adjustmentFactor', 'divAdjFactor', 'pricingDate']\n",
+    "market1 = pd.read_parquet('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market1.parquet', columns=columns_to_read)\n",
+    "market2 = pd.read_parquet('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market2.parquet', columns=columns_to_read)\n",
+    "market3 = pd.read_parquet('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market3.parquet', columns=columns_to_read)\n",
+    "market4 = pd.read_parquet('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/market4.parquet', columns=columns_to_read)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SnP500 = '/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/SnP500구성종목_wikipedia.csv'\n",
+    "\n",
+    "SnP500 = pd.read_csv(SnP500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     tickerSymbol  priceClose adjustmentFactor  divAdjFactor pricingDate\n",
+      "3416          ALB  162.080000     1.0000000000  1.0000000000  2023-10-10\n",
+      "3417          ALB  155.750000     1.0000000000  1.0000000000  2023-10-09\n",
+      "3418          ALB  159.840000     1.0000000000  1.0000000000  2023-10-06\n",
+      "3419          ALB  155.030000     1.0000000000  1.0000000000  2023-10-05\n",
+      "3420          ALB  158.400000     1.0000000000  1.0000000000  2023-10-04\n",
+      "         tickerSymbol priceClose adjustmentFactor  divAdjFactor pricingDate\n",
+      "21106287          RJF   2.350000     1.0000000000  1.0000000000  2023-10-10\n",
+      "21106288          RJF   2.380000     1.0000000000  1.0000000000  2023-10-09\n",
+      "21106289          RJF   2.400000     1.0000000000  1.0000000000  2023-10-06\n",
+      "21106290          RJF   2.430000     1.0000000000  1.0000000000  2023-10-05\n",
+      "21106291          RJF   2.410000     1.0000000000  1.0000000000  2023-10-04\n",
+      "         tickerSymbol priceClose adjustmentFactor  divAdjFactor pricingDate\n",
+      "42630814          SWK   0.300000     1.0000000000  1.0000000000  2022-02-07\n",
+      "42630815          SWK   0.300000     1.0000000000  1.0000000000  2022-02-04\n",
+      "42630816          SWK   0.305000     1.0000000000  1.0000000000  2022-02-03\n",
+      "42630817          SWK   0.300000     1.0000000000  1.0000000000  2022-02-02\n",
+      "42630818          SWK   0.300000     1.0000000000  1.0000000000  2022-02-01\n",
+      "         tickerSymbol priceClose adjustmentFactor  divAdjFactor pricingDate\n",
+      "63371249         AMAT   0.085000     1.0000000000  1.0000000000  2023-10-10\n",
+      "63371250         AMAT   0.085000     1.0000000000  1.0000000000  2023-10-09\n",
+      "63371251         AMAT   0.085000     1.0000000000  1.0000000000  2023-10-08\n",
+      "63371252         AMAT   0.084000     1.0000000000  1.0000000000  2023-10-05\n",
+      "63371253         AMAT   0.084000     1.0000000000  1.0000000000  2023-10-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# S&P 500 구성 종목 목록을 사용하여 market 데이터프레임을 필터링합니다\n",
+    "snP500_symbols = SnP500['Symbol'].unique()  # S&P 500 구성 종목 목록\n",
+    "market1_filtered = market1[market1['tickerSymbol'].isin(snP500_symbols)]\n",
+    "market2_filtered = market2[market2['tickerSymbol'].isin(snP500_symbols)]\n",
+    "market3_filtered = market3[market3['tickerSymbol'].isin(snP500_symbols)]\n",
+    "market4_filtered = market4[market4['tickerSymbol'].isin(snP500_symbols)]\n",
+    "\n",
+    "# 필터링된 데이터 확인\n",
+    "print(market1_filtered.head())\n",
+    "print(market2_filtered.head())\n",
+    "print(market3_filtered.head())\n",
+    "print(market4_filtered.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_market_data = pd.concat([market1_filtered, market2_filtered, market3_filtered, market4_filtered])\n",
+    "\n",
+    "merged_market_data.to_csv('/Users/jaekyunpark/Library/CloudStorage/OneDrive-경희대학교/JaekyunPark/S&P data/merged_market_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tickerSymbol             0\n",
+      "priceClose             139\n",
+      "adjustmentFactor         0\n",
+      "divAdjFactor        138326\n",
+      "pricingDate              0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m현재 셀 또는 이전 셀에서 코드를 실행하는 동안 Kernel이 충돌했습니다. 셀의 코드를 검토하여 오류의 가능한 원인을 식별하세요. 자세한 내용을 보려면 <a href='https://aka.ms/vscodeJupyterKernelCrash'> 여기 </a> 를 클릭하세요. 자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
+   "source": [
+    "# 각 열에 대한 결측값 개수 확인\n",
+    "null_counts = merged_market_data.isnull().sum()\n",
+    "\n",
+    "print(null_counts)\n"
    ]
   },
   {
@@ -58,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1613,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
